--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.1",
   "description": "todoApp",
   "main": "src/index.js",
+  "type": "module",
   "scripts": {
+    "start": "node src/index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -36,6 +38,7 @@
     "eslint-plugin-mocha": "10.1.0",
     "eslint-plugin-promise": "6.0.1",
     "eslint-plugin-standard": "4.1.0",
+    "nodemon": "^2.0.20",
     "semistandard": "^16.0.1"
   },
   "semistandard": {
@@ -49,5 +52,9 @@
     "parser": "@babel/eslint-parser",
     "env": [],
     "globals": []
+  },
+  "dependencies": {
+    "fastify": "^4.7.0",
+    "save-dev": "^0.0.1-security"
   }
 }
