--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/index.js",
   "type": "module",
   "scripts": {
-    "start": "node src/index",
+    "start": "nodemon src/index",
+    "semistandard": "semistandard --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -30,6 +31,8 @@
     "@babel/plugin-proposal-decorators": "^7.19.3",
     "@babel/plugin-proposal-object-rest-spread": "^7.18.9",
     "@babel/plugin-transform-runtime": "^7.19.1",
+    "@babel/preset-env": "^7.19.3",
+    "c8": "^7.12.0",
     "eslint": "8.24.0",
     "eslint-config-semistandard": "17.0.0",
     "eslint-config-standard": "17.0.0",
@@ -38,8 +41,10 @@
     "eslint-plugin-mocha": "10.1.0",
     "eslint-plugin-promise": "6.0.1",
     "eslint-plugin-standard": "4.1.0",
+    "must": "^0.13.4",
     "nodemon": "^2.0.20",
-    "semistandard": "^16.0.1"
+    "semistandard": "^16.0.1",
+    "tap": "^16.3.0"
   },
   "semistandard": {
     "plugins": [
@@ -54,7 +59,7 @@
     "globals": []
   },
   "dependencies": {
-    "fastify": "^4.7.0",
-    "save-dev": "^0.0.1-security"
+    "fastify": "^4.7.0"
+
   }
 }
