--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "nodemon src/index",
     "semistandard": "semistandard --fix",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "tap": "c8 --lines 80 --functions 80 --branches 80 --statements 80 --check-coverage --per-file tap test/**/*.test.js --no-coverage",
+    "test": "npm run semistandard && npm run tap"
   },
   "repository": {
     "type": "git",
@@ -55,8 +56,16 @@
       "chai-expect"
     ],
     "parser": "@babel/eslint-parser",
-    "env": [],
-    "globals": []
+    "env": [
+      "mocha"
+    ],
+    "globals": [
+      "describe",
+      "it",
+      "after",
+      "before",
+      "expect"
+    ]
   },
   "dependencies": {
     "fastify": "^4.7.0"
